--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -676,7 +676,7 @@ loading-bar {
 }
 
 #binder_spinners {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     display: block;
     position: absolute;
