--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1153,7 +1153,7 @@ pluto-input > button.delete_cell > span::after {
 
 /* PKG UI */
 
-pkg-bubble {
+pkg-status-mark {
     width: 6em;
     margin-left: 0.3em;
     display: inline-block;
@@ -1163,14 +1163,14 @@ pkg-bubble {
     color: #748c77;
 }
 
-pkg-bubble.installed {
+pkg-status-mark.installed {
     border-color: #afafe269;
     background: #b6bcc738;
 }
-pkg-bubble.not_found {
+pkg-status-mark.not_found {
     /* width: 2em; */
 }
-pkg-bubble select {
+pkg-status-mark select {
     width: 100%;
     white-space: nowrap;
     border: none;
@@ -1182,11 +1182,11 @@ pkg-bubble select {
     text-align-last: center;
 }
 
-pkg-bubble option {
+pkg-status-mark option {
     background: #d3752538;
     color: #00000060;
 }
-pkg-bubble option.installed {
+pkg-status-mark option.installed {
     background: unset;
     color: black;
 }
