--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1154,21 +1154,46 @@ pluto-input > button.delete_cell > span::after {
 /* PKG UI */
 
 pkg-status-mark {
-    width: 6em;
-    margin-left: 0.3em;
+    width: 1em;
+    margin: 0px 0.3em;
     display: inline-block;
-    background: #d3752538;
-    border: 3px solid #bfaa65;
-    border-radius: 4px;
-    color: #748c77;
 }
 
-pkg-status-mark.installed {
-    border-color: #afafe269;
-    background: #b6bcc738;
+pkg-status-mark > button {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    position: relative;
+    top: -0.2em;
 }
-pkg-status-mark.not_found {
-    /* width: 2em; */
+
+pkg-status-mark > button > span::after {
+    display: block;
+    content: " " !important;
+    background-size: 1.5em;
+    height: 1.5em;
+    width: 1.5em;
+
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/checkmark-outline.svg);
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/add-circle-outline.svg);
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/time-outline.svg);
+    opacity: 0.3;
+}
+
+pkg-status-mark.installed > button > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/checkmark-outline.svg);
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/cloud-done-outline.svg);
+    opacity: 0.3;
+}
+pkg-status-mark.not_found > button > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/cloud-offline-outline.svg);
+    opacity: 0.4;
+}
+pkg-status-mark.will_be_installed > button > span::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/cloud-download-outline.svg);
+    opacity: 0.4;
 }
 pkg-status-mark select {
     width: 100%;
