--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1164,9 +1164,13 @@ pkg-status-mark > button {
     padding: 0px;
     border: none;
     background: none;
-    cursor: pointer;
+    cursor: context-menu;
     position: relative;
     top: -0.2em;
+
+    /* background: rgba(127, 176, 76, 0.24);
+    border: 3px solid rgba(84, 182, 237, 0);
+    border-radius: 5px; */
 }
 
 pkg-status-mark > button > span::after {
@@ -1184,16 +1188,15 @@ pkg-status-mark > button > span::after {
 
 pkg-status-mark.installed > button > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/checkmark-outline.svg);
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/cloud-done-outline.svg);
-    opacity: 0.3;
+    /* background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/cloud-done-outline.svg); */
 }
 pkg-status-mark.not_found > button > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/cloud-offline-outline.svg);
-    opacity: 0.4;
+    opacity: 0.6;
 }
 pkg-status-mark.will_be_installed > button > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/cloud-download-outline.svg);
-    opacity: 0.4;
+    opacity: 0.6;
 }
 pkg-status-mark select {
     width: 100%;
@@ -1214,6 +1217,54 @@ pkg-status-mark option {
 pkg-status-mark option.installed {
     background: unset;
     color: black;
+}
+
+pkg-popup {
+    display: block;
+    position: absolute;
+    z-index: 50;
+    /* left: 1.5em; */
+    /* top: calc((1.5em - 200px) * 0.5); */
+    width: 200px;
+    min-height: 80px;
+    margin-left: 1.1rem;
+    margin-top: calc(0.5 * (1rem - 80px));
+    background: rgb(255, 255, 255);
+    border: 3px solid #e4eff0;
+    border-radius: 10px;
+    padding: 8px;
+
+    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+
+    opacity: 0;
+    transform: scale(0.2);
+    transform-origin: left;
+    transition: transform 0.5s ease-in-out, opacity 0.1s ease-in-out;
+    pointer-events: none;
+}
+
+pkg-popup.visible {
+    opacity: 1;
+    transform: scale(1);
+    transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
+    pointer-events: initial;
+}
+
+pkg-version {
+    font-family: "Space Mono", monospace;
+    font-size: 0.75rem;
+    opacity: 0.5;
+}
+
+pkg-popup .help {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    display: block;
+    height: 17px;
+    padding: 4px;
+    box-sizing: content-box;
+    background: white;
 }
 
 /* RUNAREA */
