--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -766,7 +766,7 @@ button#launch_binder {
     color: #0000009c;
     white-space: nowrap;
 }
-body.code_differs button#launch_binder {
+body.wiggle_binder button#launch_binder {
     position: fixed;
     animation: wiggle 0.3s ease-in-out 0s 1;
 }
