--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1233,6 +1233,7 @@ pkg-popup {
     border: 3px solid #e4eff0;
     border-radius: 10px;
     padding: 8px;
+    overflow-wrap: break-word;
 
     font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
