--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -383,10 +383,6 @@ body > header {
     font-size: 0.75rem;
 }
 
-body.loading > header {
-    background-color: hsla(290, 10%, 59%, 0.14);
-}
-
 body > header.show_export {
     position: sticky;
     top: 0;
@@ -620,6 +616,10 @@ li.dir.CodeMirror-hint:before {
     }
 }
 
+body.loading > header {
+    background-color: hsla(290, 10%, 59%, 0.14);
+}
+
 body.disconnected > header {
     background-color: rgba(255, 169, 114, 0.56);
     position: sticky;
@@ -638,12 +638,11 @@ nav:after {
     z-index: 1;
 }
 
-body.disconnected > header > nav#at_the_top:after {
-    content: "Reconnecting...";
-}
-
 body.loading > header > nav:after {
     content: "Loading...";
+}
+body.disconnected > header > nav:after {
+    content: "Reconnecting...";
 }
 
 /* PREAMBLE */
