--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -616,16 +616,24 @@ li.dir.CodeMirror-hint:before {
     }
 }
 
+body.process_dead > header,
+body.disconnected > header {
+    position: sticky;
+    top: 0;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+}
+
+body.process_dead > header {
+    background-color: rgb(255 114 114 / 38%);
+}
+
 body.loading > header {
     background-color: hsla(290, 10%, 59%, 0.14);
 }
 
 body.disconnected > header {
     background-color: rgba(255, 169, 114, 0.56);
-    position: sticky;
-    top: 0;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
 }
 
 nav:after {
@@ -636,6 +644,10 @@ nav:after {
     background: white;
     border-radius: 10px;
     z-index: 1;
+}
+
+body.process_dead > header > nav:after {
+    content: "Process exited";
 }
 
 body.loading > header > nav:after {
